--- a/templates/reservations/commande.html.twig
+++ b/templates/reservations/commande.html.twig
@@ -65,11 +65,10 @@
                                     <h2 class="H2-corps">{{ distance }}km</h2>
                                 </div>
                             </div>
+                            <div class="row">
+                                <h5>Durée : {{ duree }} </h5>
+                            </div>
                             <div id="map"></div>
-                        </div>
-                        <div class="card-infos mt-5">
-                            <h3 class="H2-corps">Paiement 100% sécurisé </h3>
-                            <img class="img-fluid" src="{{ asset('images/paiement-cb.png') }}" alt="">
                         </div>
                     </div>
                     <div class="col ">
