--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="{{ path('accueil') }}#contact"><span data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Contact</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="{{ path('reservation') }}" type="button" class="button-head btn btn-danger ms-3">Réserver une course</a>
+                        <a href="{{ path('course') }}" type="button" class="button-head btn btn-danger ms-3">Réserver une course</a>
 
                     </li>
                 </ul>
@@ -53,36 +53,22 @@
 
         {% endblock %}
     {% block footer %}
-        <!-- Footer -->
         <footer class="text-center text-lg-start bg-light text-muted">
-            <!-- Section: Social media -->
             <section
-                    class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
-            >
-                <!-- Left -->
+                    class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
                 <div class="me-5 d-none d-lg-block">
                     <span>Suivez-nous sur les réseaux sociaux</span>
                 </div>
-                <!-- Left -->
-
-                <!-- Right -->
                 <div>
                     <a href="{{ asset('https://www.facebook.com/cardosovtc/') }}" target="_blank " class="me-4 text-reset">
                         <i class="fab fa-facebook-f"></i>
                     </a>
                 </div>
-                <!-- Right -->
             </section>
-            <!-- Section: Social media -->
-
-            <!-- Section: Links  -->
             <section class="">
                 <div class="container text-center text-md-start mt-5">
-                    <!-- Grid row -->
                     <div class="row mt-3">
-                        <!-- Grid column -->
                         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                            <!-- Content -->
                             <h6 class="text-uppercase fw-bold mb-4">
                                 Cardoso VTC 34
                             </h6>
@@ -91,32 +77,24 @@
                             </p>
                             <img class="ms-3 me-4 logo" src="{{ asset('images/logo-header.svg') }}" alt="">
                         </div>
-                        <!-- Grid column -->
-
-                        <!-- Grid column -->
                         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                            <!-- Links -->
                             <h6 class="text-uppercase fw-bold mb-4">
                                 Réservez votre chauffeur privé
                             </h6>
                             <p>
-                                <a href="{{ path('reservation') }}" class="text-reset text-decoration-none">Chauffeur privé à Sete</a>
+                                <a href="{{ path('course') }}" class="text-reset text-decoration-none">Chauffeur privé à Sete</a>
                             </p>
                             <p>
-                                <a href="{{ path('reservation') }}" class="text-reset text-decoration-none">Chauffeur privé à Frontignan</a>
+                                <a href="{{ path('course') }}" class="text-reset text-decoration-none">Chauffeur privé à Frontignan</a>
                             </p>
                             <p>
-                                <a href="{{ path('reservation') }}" class="text-reset text-decoration-none">Chauffeur privé à Montpellier</a>
+                                <a href="{{ path('course') }}" class="text-reset text-decoration-none">Chauffeur privé à Montpellier</a>
                             </p>
                             <p>
-                                <a href="{{ path('reservation') }}" class="text-reset text-decoration-none">Chauffeur privé à Agde</a>
+                                <a href="{{ path('course') }}" class="text-reset text-decoration-none">Chauffeur privé à Agde</a>
                             </p>
                         </div>
-                        <!-- Grid column -->
-
-                        <!-- Grid column -->
                         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                            <!-- Links -->
                             <h6 class="text-uppercase fw-bold mb-4">
                                 Navigation
                             </h6>
@@ -127,17 +105,13 @@
                                 <a href="{{ path('accueil') }}#nosServices" class="text-reset text-decoration-none">Nos services</a>
                             </p>
                             <p>
-                                <a href="{{ path('reservation') }}" class="text-reset text-decoration-none">Réservation en ligne</a>
+                                <a href="{{ path('course') }}" class="text-reset text-decoration-none">Réservation en ligne</a>
                             </p>
                             <p>
                                 <a href="{{ path('accueil') }}#contact" class="text-reset text-decoration-none">Contact</a>
                             </p>
                         </div>
-                        <!-- Grid column -->
-
-                        <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                            <!-- Links -->
                             <h6 class="text-uppercase fw-bold mb-4">
                                 Contact
                             </h6>
@@ -151,14 +125,9 @@
                                 <a href="tel:0624512297 " class="text-reset text-decoration-none">06 24 51 22 97</a>
                             </p>
                         </div>
-                        <!-- Grid column -->
                     </div>
-                    <!-- Grid row -->
                 </div>
             </section>
-            <!-- Section: Links  -->
-
-            <!-- Copyright -->
             <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
                 © 2022 Copyright: Cardoso VTC |
                 <a class="text-reset fw-bold" href="{{ path('mentions') }}">Mentions légales</a> -
@@ -168,9 +137,7 @@
                 <a class="text-reset" href="https://www.eric-parlaoz.fr/" target="_blank">Eric PARLAOZ</a>
 
             </div>
-            <!-- Copyright -->
         </footer>
-        <!-- Footer -->
     {% endblock %}
     {% block javascripts %}
         <script  src="https://js.stripe.com/v3/"></script>
